// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can paste a valid url and add it to topic 1`] = `
.emotion-15 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-14 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 600px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-4 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-2 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-2:hover,
.emotion-2:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-2[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-2:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:disabled,
.emotion-2:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-2:focus {
  outline-width: medium;
}

.emotion-1 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-13 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-10 {
  width: 100%;
}

.emotion-10 > * {
  width: 100%;
}

.emotion-10 form {
  background-color: white;
}

.emotion-8 {
  margin-top: 6.5px;
}

.emotion-8:first-of-type {
  margin-top: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 label {
  width: 104px;
  max-width: 104px;
  padding: 20px 13px 13px 0;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-5 input,
.emotion-5 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-5 input:focus,
.emotion-5 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-5 input {
  padding: 6.5px 13px;
}

.emotion-5 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-5 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-11 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-11:hover,
.emotion-11:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-11:hover,
.emotion-11:active,
.emotion-11:disabled,
.emotion-11:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-11:focus {
  outline-width: medium;
}

.emotion-11,
.emotion-11:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

<div
  class="emotion-15"
>
  <div
    aria-hidden="true"
    class="emotion-0"
  />
  <div
    class="emotion-14"
  >
    <div
      class="emotion-4"
    >
      Søk etter ressurs
      <button
        class="emotion-2 emotion-3"
        type="button"
      >
        <svg
          class="c-icon emotion-1"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-10"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <form
              class="emotion-5"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value="https://beta.ndla.no/subject:3/topic:1:179373/topic:1:170165/resource:1:168388/"
              />
            </form>
          </div>
        </div>
        <span
          class="c-errorMessage"
        >
          Obs! Denne ressursen er en annen type urn:resourcetype:tasksAndActivities
        </span>
        <div
          class="c-article-preview"
          data-testid="articlePreview"
        >
          <div
            class="c-article-preview__image"
          >
            <img
              alt=""
              src="/placeholder.png"
            />
          </div>
          <div
            class="c-article-preview__content"
          >
            <h1
              class="c-article-preview__title"
            >
              Hva kan du om geologiske prosesser?
            </h1>
            <p
              class="c-article-preview__description"
            />
          </div>
        </div>
      </div>
      <button
        class="emotion-11 emotion-3"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 1`] = `
.emotion-87 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-86 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 600px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-4 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-2 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-2:hover,
.emotion-2:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-2[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-2:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:disabled,
.emotion-2:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-2:focus {
  outline-width: medium;
}

.emotion-1 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-85 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-82 {
  width: 100%;
}

.emotion-82 > * {
  width: 100%;
}

.emotion-82 form {
  background-color: white;
}

.emotion-8 {
  margin-top: 6.5px;
}

.emotion-8:first-of-type {
  margin-top: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 label {
  width: 104px;
  max-width: 104px;
  padding: 20px 13px 13px 0;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-5 input,
.emotion-5 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-5 input:focus,
.emotion-5 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-5 input {
  padding: 6.5px 13px;
}

.emotion-5 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-5 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 20px 0;
}

.emotion-80 {
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  background: #fff;
  border-radius: 4px;
  box-shadow: 0 0 19px rgba(0,0,0,0.2);
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  width: 100%;
}

.emotion-76 {
  overflow-y: scroll;
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-name: fadeInLeft;
  animation-name: fadeInLeft;
  border-top: 1px solid #f8f8f8;
  max-height: 500px;
}

.emotion-78 {
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
  color: #757575;
  padding: 13px;
  border-top: 1px solid #f8f8f8;
}

.emotion-83 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-83:hover,
.emotion-83:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-83[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-83:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-83:hover,
.emotion-83:active,
.emotion-83:disabled,
.emotion-83:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-83:focus {
  outline-width: medium;
}

.emotion-83,
.emotion-83:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

.emotion-20 {
  border: 0;
  border-bottom: 1px solid #f8f8f8;
  padding: 13px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  -webkit-transition: background 200ms ease;
  transition: background 200ms ease;
  background: transparent;
}

.emotion-20:focus,
.emotion-20:hover {
  background: #deebf6;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 13px;
  -webkit-box-flex: 3;
  -webkit-flex-grow: 3;
  -ms-flex-positive: 3;
  flex-grow: 3;
}

.emotion-16 {
  font-size: 18;
  font-size: 1rem;
  line-height: 1.1;
  font-weight: 600;
  color: #444;
  text-align: left;
}

<div
  class="emotion-87"
>
  <div
    aria-hidden="true"
    class="emotion-0"
  />
  <div
    class="emotion-86"
  >
    <div
      class="emotion-4"
    >
      Søk etter ressurs
      <button
        class="emotion-2 emotion-3"
        type="button"
      >
        <svg
          class="c-icon emotion-1"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-85"
    >
      <div
        class="emotion-82"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <form
              class="emotion-5"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value=""
              />
            </form>
          </div>
        </div>
        <div
          class="emotion-10"
        >
          Eller
        </div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns="downshift-0-menu"
          role="combobox"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-6 emotion-7"
            >
              <form
                class="emotion-5"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-0-menu"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <svg
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <title>
                    Search
                  </title>
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </form>
            </div>
          </div>
          <div
            aria-labelledby="downshift-0-label"
            class="emotion-80 emotion-81"
            data-testid="dropdown-items"
            id="downshift-0-menu"
            role="listbox"
          >
            <div
              class="emotion-76 emotion-77"
            >
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-0"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om geologiske prosesser?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-1"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om petroleumsgeologi?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-2"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om olje og gass på den norske sokkelen?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-3"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om letemetoder og datainnsamling?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-4"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om installasjoner for boring og vedlikehold?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-5"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om installasjoner for produksjon?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-6"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Sammendrag om rørhåndtering
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-7"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om slamsystemet?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-8"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om sementeringsutstyret?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-20 emotion-21"
                id="downshift-0-item-9"
                role="option"
                type="button"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  <span
                    class="emotion-16 emotion-17"
                  >
                    Hva kan du om stigerørsystemet?
                  </span>
                  
                </div>
              </button>
            </div>
            <div
              class="emotion-78 emotion-79"
            >
              Søket gav 10 treff
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-83 emotion-3"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 2`] = `
.emotion-21 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-20 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 600px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-4 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-2 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-2:hover,
.emotion-2:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-2[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-2:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-2:hover,
.emotion-2:active,
.emotion-2:disabled,
.emotion-2:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-2:focus {
  outline-width: medium;
}

.emotion-1 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-19 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-16 {
  width: 100%;
}

.emotion-16 > * {
  width: 100%;
}

.emotion-16 form {
  background-color: white;
}

.emotion-8 {
  margin-top: 6.5px;
}

.emotion-8:first-of-type {
  margin-top: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 label {
  width: 104px;
  max-width: 104px;
  padding: 20px 13px 13px 0;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-5 input,
.emotion-5 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-5 input:focus,
.emotion-5 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-5 input {
  padding: 6.5px 13px;
}

.emotion-5 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-5 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 20px 0;
}

.emotion-17 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-17:hover,
.emotion-17:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-17[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-17:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-17:hover,
.emotion-17:active,
.emotion-17:disabled,
.emotion-17:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-17:focus {
  outline-width: medium;
}

.emotion-17,
.emotion-17:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

<div
  class="emotion-21"
>
  <div
    aria-hidden="true"
    class="emotion-0"
  />
  <div
    class="emotion-20"
  >
    <div
      class="emotion-4"
    >
      Søk etter ressurs
      <button
        class="emotion-2 emotion-3"
        type="button"
      >
        <svg
          class="c-icon emotion-1"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            Cross
          </title>
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-19"
    >
      <div
        class="emotion-16"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <form
              class="emotion-5"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value=""
              />
            </form>
          </div>
        </div>
        <div
          class="emotion-10"
        >
          Eller
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-6 emotion-7"
            >
              <form
                class="emotion-5"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value="Hva kan du om geologiske prosesser?"
                />
                <svg
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <title>
                    Search
                  </title>
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </form>
            </div>
          </div>
        </div>
        <div
          class="c-article-preview"
          data-testid="articlePreview"
        >
          <div
            class="c-article-preview__image"
          >
            <img
              alt=""
              src="/placeholder.png"
            />
          </div>
          <div
            class="c-article-preview__content"
          >
            <h1
              class="c-article-preview__title"
            >
              Hva kan du om geologiske prosesser?
            </h1>
            <p
              class="c-article-preview__description"
            />
          </div>
        </div>
      </div>
      <button
        class="emotion-17 emotion-3"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;
